<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuzzFunds</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_button_text">Login</string>
    <string name="login_sucess_text">Success!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_username_text">Choose a username:</string>
    <string name="register_password_text">Choose a password</string>
    <string name="register_passwordverify_text">Re-enter your password:</string>
    <string name="register_button_text">Register</string>
    <string name="error_username_exists">Username already exists.</string>
    <string name="title_activity_success">SuccessActivity</string>
    <string name="success_text">Success!</string>
    <string name="title_activity_account_overview">AccountOverviewActivity</string>
    <string name="no_accounts">Whoa! It looks like you don\'t have any accounts associated with your login. Why don\'t you add one?</string>
    <string name="add_account">Add account</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="create_account_id">Please enter the ID of your new account:</string>
    <string name="create_account_type">Please select an account type:</string>
    <string name="create_account_savings">Savings</string>
    <string name="create_account_checking">Checking</string>
    <string name="create_account">Create account</string>
    <string name="new_account_button">New Account</string>
    <string name="error_account_create">Server-side error creating your account.</string>
    <string name="account_detail_name">AccountName</string>
    <string name="detail_type_label">Type</string>
    <string name="detail_balance_label">Balance</string>
    <string name="detail_start_transaction">Perform transaction</string>
    <string name="detail_type_val">TypeVal</string>
    <string name="detail_balance_val">BalanceVal</string>
    <string name="title_activity_account_detail">AccountDetailActivity</string>
    <string name="title_activity_transaction_create">TransactionCreateActivity</string>
    <string name="title_activity_choose_transaction_type">ChooseTransactionTypeActivity</string>
    <string name="title_activity_deposit_transaction">DepositTransactionActivity</string>
    <string name="title_activity_withdrawl_transaction">WithdrawlTransactionActivity</string>
    <string name="title_activity_transfer_transaction">TransferTransactionActivity</string>
    <string name="title_activity_withdrawal_transaction">WithdrawalTransactionActivity</string>
    <string name="transaction_deposit_button">Deposit</string>
    <string name="transaction_withdrawal_button">Withdrawal</string>
    <string name="transaction_transfer_button">Transfer</string>
    <string name="transaction_choose_text">What kind of transaction?</string>
    <string name="submit_button_text">Submit</string>
    <string name="amount_delta">00.00</string>
    <string name="amount_text">Amount:</string>
    <string name="enact_text">Enact Date:</string>
    <string name="year">YYYY</string>
    <string name="month">MM</string>
    <string name="day">DD</string>
    <string name="withdrawal">Withdrawal Transaction</string>
    <string name="transfer">Transferral Transaction</string>
    <string name="deposit">Deposit     Transaction</string>
    <string name="accountText">Account</string>
    <string name="toAccountText">To account:</string>
    <string name="error_transaction">There was an error completing your transaction.</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="detail_transaction_history">Transaction history</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_title">BuzzFunds</string>
    <!-- Help text below... -->
    <string name="global_help_label">Help...</string>
    <string name="global_help_label_off">Hide help</string>
    <string name="account_detail_help">Click the "Perform transaction" button below to create a new Deposit,
        Withdrawal, or Transfer transaction. You can also see a raw report of your transactions by clicking on the
        "Transaction history" button.</string>
    <string name="account_overview_help">Click one of the accounts in the view above to view an account summary
    for that account. You can also click "New Account" below to add a new one.</string>
    <string name="choose_transaction_help">Click one of the buttons above to set up a new withdrawal out of this
        account, deposit into this account, or transfer out of this account.</string>
    <string name="create_account_help">Enter a new name that will be used to identify this new account above,
    followed by the account type in the buttons below it.</string>
    <string name="deposit_transaction_help">Enter the amount you wish to deposit into this account above, followed
    by the date you want to be associated with it in the YYYY-MM-DD format specified above.</string>
    <string name="history_help"></string>
    <string name="login_help">Please enter your username and password above. Your username is NOT your account ID(s)!</string>
    <string name="main_help">If you have an account, press the "Login" button to authenticate above. Otherwise, you
    can create a new account by pressing "Register."</string>
    <string name="register_help">Enter a new username and password above. You will need to remember this combination.
    Passwords must be at least four characters long.</string>
    <string name="transfer_transaction_help">Enter the (positive number) amount you wish to transfer out of this
        account above, followed by the date you want to be associated with it in the YYYY-MM-DD format specified above.</string>
    <string name="withdrawal_transaction_help">Enter the (positive number) amount you wish to withdraw out of this account above, followed by the date you want to be associated with it in the YYYY-MM-DD format specified above.</string>
    <string name="transaction_help">Enter the amount you wish to deposit/withdraw from this account, followed by the date, an identifying name, and category.</string>
    <!-- End help text -->
    <string name="delete_account">Delete...</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="transaction_activity_title">New Transaction</string>
    <string name="transaction_type">Type:</string>
    <string name="depositName">Deposit</string>
    <string name="withdrawalName">Withdrawal</string>
    <string name="transferName">Transfer</string>
    <string name="interestRate">Interest rate:</string>
    <string name="transaction_name">Name:</string>
    <string name="transaction_category">Category:</string>
<<<<<<< HEAD
    <string name="title_activity_edit_account">EditAccountActivity</string>
    <string name="edit_account_name_label">Account name:</string>
    <string name="edit_account_interest_label">Interest rate:</string>
    <string name="edit_account_title">Edit Account Details</string>
    <string name="editAccountLabel">Edit...</string>
=======
    <string name="register_email_text">Please enter your email</string>
    <string name="prompt_email">email@example.com</string>
>>>>>>> origin/last-eclipse-build-fork
</resources>
