<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountDetailActivity" >

    <TextView
        android:id="@+id/account_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_detail_name"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/detail_balance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/detail_type_label"
        android:layout_below="@+id/detail_type_label"
        android:layout_marginTop="25dp"
        android:text="@string/detail_balance_label" />

    <TextView
        android:id="@+id/detail_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/account_detail_name"
        android:layout_below="@+id/account_detail_name"
        android:layout_marginTop="19dp"
        android:text="@string/detail_type_label" />

    <TextView
        android:id="@+id/detail_balance_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/detail_balance_label"
        android:layout_marginLeft="74dp"
        android:layout_toRightOf="@+id/detail_balance_label"
        android:text="@string/detail_balance_val"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/detail_type_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/detail_balance_val"
        android:layout_alignTop="@+id/detail_type_label"
        android:text="@string/detail_type_val"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/detail_start_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/detail_start_transaction" 
        android:onClick="switchToChooseTransactionTypeActivity"/>

</RelativeLayout>