<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccountActivity" >

    <TextView
        android:id="@+id/detail_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_id" />

    <Button
        android:id="@+id/create_account_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createAccount"
        android:text="@string/create_account" android:layout_above="@+id/helpView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/account_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_account_newId"
        android:layout_below="@+id/create_account_newId"
        android:layout_marginTop="27dp"
        android:text="@string/create_account_type" />

    <RadioGroup
        android:id="@+id/newAccountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/account_detail_name"
        android:layout_below="@+id/account_detail_name"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="17dp" >

        <RadioButton
            android:id="@+id/create_account_savings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/create_account_savings" />

        <RadioButton
            android:id="@+id/create_account_checking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_checking" />
    </RadioGroup>

    <EditText
        android:id="@+id/create_account_newId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/create_account_submit"
        android:layout_below="@+id/detail_type_label"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/global_help_label"
            android:id="@+id/helpView"
            android:textColor="#598aff"
            android:clickable="true"
            android:onClick="displayHelp" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/helpText"
            android:textColor="#598aff"
            android:visibility="invisible"
            android:text="@string/create_account_help"
            android:layout_below="@+id/newAccountType" android:layout_alignParentLeft="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/interestRate"
            android:id="@+id/interestRate"
            android:singleLine="false"
            android:layout_below="@+id/newAccountType" android:layout_alignLeft="@+id/account_detail_name"
            android:layout_marginTop="62dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/newAccountRate"
            android:hint="0.00%"
            android:layout_below="@+id/interestRate" android:layout_alignLeft="@+id/interestRate"/>

</RelativeLayout>