<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TransferTransactionActivity" >

    <!-- Withdrawal progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Withdrawal form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="290dp" >

            <TextView
                android:id="@+id/withdrawal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/transfer"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/amount_text"
                android:layout_below="@+id/amount_text"
                android:ems="10"
                android:hint="@string/amount_delta"
                android:inputType="text|textNoSuggestions"
                android:maxLines="1"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/enact_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/amount"
                android:layout_marginLeft="18dp"
                android:text="@string/enact_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/amount"
                android:layout_alignRight="@+id/enact_text"
                android:layout_below="@+id/enact_text"
                android:ems="10"
                android:hint="@string/year"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLength="4"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/enact_text"
                android:layout_below="@+id/withdrawal"
                android:text="@string/amount_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/year"
                android:layout_alignBottom="@+id/year"
                android:layout_toLeftOf="@+id/day"
                android:layout_toRightOf="@+id/year"
                android:ems="10"
                android:hint="@string/month"
                android:maxLength="2" />

            <EditText
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/month"
                android:layout_alignLeft="@+id/sign_in_button"
                android:layout_alignRight="@+id/amount"
                android:ems="10"
                android:hint="@string/day"
                android:maxLength="2" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/withdrawal"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/submit_button_text" />

            <TextView
                android:id="@+id/toAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/year"
                android:layout_centerVertical="true"
                android:text="@string/toAccountText" />

            <EditText
                android:id="@+id/destination_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/toAccountText"
                android:layout_below="@+id/year"
                android:ems="10"
                android:hint="@string/accountText"
                android:inputType="text|textNoSuggestions"
                android:maxLines="1"
                android:paddingRight="0dp"
                android:paddingTop="25dp"
                android:singleLine="true" />

        </RelativeLayout>

    </ScrollView>

</merge>
