<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs2340.buzzfunds.EditAccountActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editAccountInterest" android:layout_alignParentTop="true" android:layout_alignParentLeft="true"
            android:layout_marginTop="157dp" android:singleLine="true"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editAccountName" android:layout_alignParentTop="true"
            android:layout_marginTop="69dp" android:layout_alignRight="@+id/editAccountInterest"
            android:layout_alignParentLeft="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/edit_account_name_label"
            android:id="@+id/editAccountNameLabel" android:layout_alignParentTop="true" android:layout_alignLeft="@+id/editAccountName"
            android:layout_marginTop="43dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/edit_account_title"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/edit_account_interest_label"
            android:id="@+id/textView3" android:layout_below="@+id/editAccountName" android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp" android:singleLine="false"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            android:id="@+id/submitButton"
            android:onClick="submitChanges"
            android:layout_alignParentBottom="true" android:layout_alignParentRight="true"/>
</RelativeLayout>
